# Matrix-Calculus

./: .gitignore  CMakeLists.txt  README.md  build_lib.sh  requirements.txt  setup.py
matrix_ops/: __init__.py  block_mul.py  matrix_module.pyi
matrix_ops_cpp/: .gitignore  Makefile  bindings.cpp  lib_download.sh  main.cpp
matrix_ops_cpp/include/: gauss_lu.h  matrix.h  multiplications.h
matrix_ops_cpp/src/: gauss_lu.cpp  matrix.cpp
matrix_package/: __init__.py  block_multiplications.py  my_module.pyi
reports/: report1.ipynb  report2.ipynb  report3.ipynb  report4.ipynb  report5.ipynb  report6.ipynb
src/: .gitignore  Makefile  bindings.cpp  example.cpp  matrix.cpp  matrix.h  multiplications.cpp  multiplications.h  numpy_bindings.cpp
